--- a/backoffice/frontend/package.json
+++ b/backoffice/frontend/package.json
@@ -12,11 +12,15 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.1",
     "@tsconfig/svelte": "^3.0.0",
+    "carbon-components-svelte": "^0.79.0",
     "svelte": "^3.49.0",
     "svelte-check": "^2.8.0",
     "svelte-preprocess": "^4.10.7",
     "tslib": "^2.4.0",
     "typescript": "^4.6.4",
     "vite": "^3.0.7"
+  },
+  "dependencies": {
+    "axios": "^1.4.0"
   }
 }
